--- a/src/app/parse/parse.component.html
+++ b/src/app/parse/parse.component.html
@@ -1,8 +1,9 @@
 <div class="row">
   <div class="col-md-4">
     <div class="form-group">
-      <label for="textArea">Input</label>
-      <textarea ref-textarea [(ngModel)]="fieldData" class="form-control" id="input" rows="20"></textarea>
+      <div class="form-row">
+        <textarea ref-textarea [(ngModel)]="fieldData" class="form-control" id="input" rows="10" placeholder="Copy Ledger To Clipboard and Paste here..."></textarea>
+      </div>
 
       <div class="form-row">
         <div class="input-group input-group-sm mb-3">
@@ -31,7 +32,6 @@
     <button type="submit" (click)="parse()" class="btn btn-primary mb-2">TAX</button>
   </div>
   <div class="col-md-8">
-    <h2>Input Total</h2>
     <table class="table table-hover">
       <thead>
         <tr>
@@ -51,7 +51,7 @@
       </tbody>
     </table>
 
-    <h2>By Pilot</h2>
+    <h3>By Pilot</h3>
     <table class="table table-hover">
       <thead>
         <tr>
@@ -76,7 +76,7 @@
       </tbody>
     </table>
 
-    <h2>By Corporation</h2>
+    <h3>By Corporation</h3>
     <table class="table table-hover">
       <thead>
         <tr>
