--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
+<div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
+    <div class="container">
+        <a class="navbar-brand" href="/">Moon Tax Calculator</a>
+    </div>
+</div>
+
 <div class="container">
     <app-parse></app-parse>
+</div>
+
+<div class="container-fluid text-center">
+    <p>by puttputt</p>
+    <p>source on <a href="https://github.com/puttputt/moon-tax">github</a></p>
 </div>
