--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+    padding-top: 120px;
+}
+
+.table {
+    font-size: 10px;
+}
